log/build_2022-11-19_16-46-35/robo_builder_py/stderr.log
  File "/home/ubuntu/workspace/Velizar/robotics_v1/install/robo_builder_py/lib/python3.8/site-packages/robo_builder_py/points.py", line 107
    'release':[first_cube_in_tower_release[0],
    ^
SyntaxError: invalid syntax

